[gd_scene load_steps=8 format=3 uid="uid://cg4dp221u0lg1"]

[ext_resource type="Script" path="res://src/joystick_indicator.gd" id="1_q66dn"]
[ext_resource type="Texture2D" uid="uid://b1qpn87j2pd8r" path="res://assets/ui/tutorial/joystick_down.png" id="2_boqef"]
[ext_resource type="Texture2D" uid="uid://qpq1bvnqowxv" path="res://assets/ui/tutorial/joystick_left.png" id="3_365tt"]
[ext_resource type="Texture2D" uid="uid://bkknry35a8p5v" path="res://assets/ui/tutorial/joystick_up.png" id="4_42vdg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_u00t0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_boqef")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_365tt")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_42vdg")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_qm7t6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_boqef")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_42vdg")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_aea32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_365tt")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}]

[node name="JoystickIndicator" type="Node3D"]
script = ExtResource("1_q66dn")

[node name="Single" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, 0, 0, 0)
visible = false
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_u00t0")
animation = &"down"

[node name="UpDown" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, -0.161583, 0, 0)
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_qm7t6")
animation = &"down"

[node name="LeftRight" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, 0.190754, 0, 0)
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_aea32")
animation = &"left"
autoplay = "left"
